<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitGAI</string>
    <string name="title_home">홈</string>
    <string name="title_pose_detector">운동하기</string>
    <string name="title_my_page">마이페이지</string>
    <string name="title_course">홈화면</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_skeleton_web">운동 분석</string>

    <!-- menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_page">My</string>

    <!-- 공통 문구 -->
    <string name="all_loading">loading..</string>
    <string name="all_title_sample">Title Text</string>
    <string name="all_description_sample">"Description Test Text.
        다람쥐 헌 쳇바퀴에 타고파. 하늘처럼 맑은 사람이 되고 싶다. 참나무 타는 소리와 야경만큼 밤의 여유를 표현해 주는 것도 없다."</string>
    <string name="all_button_sample">버튼샘플</string>
    <string name="all_ok">확인</string>
    <string name="all_cancel">취소</string>
    <string name="all_close">닫기</string>
    <string name="all_yes">네</string>
    <string name="all_no">아니오</string>

    <string name="all_select_all">전체 선택</string>

    <!-- Dialog version -->
    <string name="dialog_version_title">업데이트 안내</string>
    <string name="dialog_version_description_required">최신 버전이 존재하여 Play 스토어로 이동합니다.</string>
    <string name="dialog_version_description">최신 버전이 존재합니다.
        \n업데이트 하시겠습니까?</string>
    <string name="dialog_version_update_button">업데이트</string>
    <string name="dialog_server_network">서버와의 연결이 원활하지 않습니다.</string>

    <string name="dialog_login_social_fail">로그인이 성공적으로 이루어지지 못했습니다.
    \n다시 시도해주세요.</string>
    <string name="dialog_login_social_not_activate">개발 중인 서비스로 권한을 제한했습니다.
        \n관리자에게 문의주세요.</string>
    <string name="dialog_login_hnh_not_found">찾을 수 없는 사용자입니다.</string>
    <string name="dialog_login_not_provide">제공 예정인 소셜 로그인입니다.
    \n카카오, 구글 로그인을 이용해주세요.</string>

    <!-- Login -->
    <string name="login_title">함께 운동을\n시작해볼까요?</string>
    <string name="login_google">구글로 로그인하기</string>
    <string name="login_kakao">카카오로 로그인하기</string>
    <string name="login_naver">네이버로 로그인하기</string>
    <string name="login_developer">개발자 로그인하기</string>
    <string name="login_code_hint">코드 입력 후 로그인이 가능합니다</string>
    <string name="login_code_hint_success">확인이 완료되었습니다. 로그인을 진행해주세요.</string>
    <string name="login_code_hint_fail">잘못된 코드입니다.</string>
    <string name="dialog_login_failed">코드 확인을 먼저 해주세요.</string>
    <string name="dialog_login_retry_kakao">카카오 재로그인을 시도합니다.</string>
    <string name="dialog_login_retry_google">구글 재로그인을 시도합니다.</string>

    <!-- Home -->
    <string name="title_home_exercise">운동하기</string>
    <string name="title_home_report">운동분석</string>
    <string name="title_home_video">추천 컨텐츠</string>
    <string name="title_home_sample">커뮤니티</string>

    <!-- Home Course-->
    <string name="course_detail_title">상세 코스</string>
    <string name="course_video_detail_title">운동 영상</string>
    <string name="course_no_course_detail_message">no contents</string>
    <string name="course_video_move_pose_detector" translatable="false">운동가기</string>

    <!-- Course Detail-->
    <string name="course_detail_contents_list_title">운동 구성</string>

    <!-- pose detector -->
    <string name="title_squat_pose_detector">스쿼트 운동하기</string>
    <string name="title_dead_lift_pose_detector">데드리프트 운동하기</string>
    <string name="title_side_lateral_raise_pose_detector">사이드 레터럴 레이즈 운동하기</string>
    <string name="title_lunge_pose_detector">런지 운동하기</string>
    <string name="title_shoulder_press_pose_detector">숄더프레스 운동하기</string>
    <string name="title_lat_pull_down_pose_detector">렛풀다운 운동하기</string>
    <string name="title_cable_low_pose_detector">케이블로우 운동하기</string>
    <string name="title_cable_push_down_pose_detector">케이블푸쉬다운 운동하기</string>
    <string name="title_standing_barbell_curl_pose_detector">스탠딩바벨컬 운동하기</string>
    <string name="permission_dialog_pose_detector_require_description">서비스 이용을 위해 권한을 허용해야 합니다.</string>

    <string name="pose_detector_video_button">꿀팁영상</string>
    <string name="pose_detector_change_text_button">안내문구변경</string>
    <string name="pose_detector_recorder_button">녹화</string>
    <string name="pose_detector_exercise_button">운동시작</string>

    <string name="squat_channel_name">Squats</string>
    <string name="squat_channel_description">Let\'s see how do you perform with squats?</string>
    <string name="handsup_channel_name">Raising hands</string>
    <string name="handsup_channel_description">Let\'s see how do you perform with raising your hands?</string>
    <string name="squat_noti_title">Making some squats!</string>
    <string name="squat_noti_text">Counting your performance</string>
    <string name="handsup_noti_title">Raising your hands!</string>
    <string name="handsup_noti_text">Counting your performance</string>
    <string name="take_photo">Take Photo</string>

    <!-- Dialog Pose Fragment-->
    <string name="dialog_pose_title">서비스 안내</string>
    <string name="dialog_pose_description_no">서비스 제공 예정인 기능입니다.</string>
    <string name="dialog_pose_no_camera_level3">녹화 기능을 지원하지 않는 단말기입니다.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Exercise List -->
    <string name="exercise_title">운동명</string>
    <string name="exercise_description">운동 설명입니다.</string>
    <string name="exercise_difficulty_title">난이도</string>
    <string name="exercise_ai_title">AI</string>
    <string name="exercise_calorie_title">칼로리</string>


</resources>