<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <!-- Media -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_view_course"
                    android:layout_width="@dimen/exercise_cover_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:contentDescription="@string/all_ok"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="100"
                    app:layout_constraintStart_toEndOf="@id/text_view_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
                    app:srcCompat="@drawable/course_thumbnail" />

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/text_view_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/exercise_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/image_view_course"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="5dp"
                    android:maxLines="3"
                    android:text="@string/exercise_description"
                    app:layout_constraintBottom_toTopOf="@id/chip_ai"
                    app:layout_constraintEnd_toEndOf="@id/text_view_title"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ai"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:clickable="false"
                    android:text="@string/exercise_ai_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:singleLine="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_difficulty"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="3dp"
                    android:clickable="false"
                    android:text="@string/exercise_difficulty_title"
                    app:chipEndPadding="5dp"
                    app:chipStartPadding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_ai"
                    app:singleLine="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_calorie"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="3dp"
                    android:clickable="false"
                    android:text="@string/exercise_calorie_title"
                    app:chipEndPadding="5dp"
                    app:chipStartPadding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_difficulty"
                    app:singleLine="true" />

                <Button
                    android:id="@+id/button_setting"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:paddingHorizontal="1dp"
                    android:text="설정"
                    android:textAppearance="?attr/textAppearanceLabelMedium"
                    app:layout_constraintBottom_toBottomOf="@id/chip_calorie"
                    app:layout_constraintEnd_toStartOf="@id/image_view_course"
                    app:layout_constraintStart_toEndOf="@id/chip_calorie"
                    app:layout_constraintTop_toTopOf="@id/chip_calorie" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="3dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>
