<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:paddingStart="@dimen/dialog_margin"
    android:paddingEnd="@dimen/dialog_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_text_margin"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/all_title_sample" />

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_text_margin"
            android:layout_marginTop="@dimen/dialog_text_margin_small"
            app:layout_goneMarginTop="24dp"
            android:layout_marginEnd="@dimen/dialog_text_margin"
            android:layout_marginBottom="@dimen/dialog_text_margin_small"
            android:gravity="top|start"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/button_positive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title"
            tools:text="@string/all_description_sample" />

        <Button
            android:id="@+id/button_positive"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_button_margin"
            android:padding="@dimen/dialog_text_margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black3"
            android:textSize="14sp"
            tools:text="@string/all_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
